@@ -1,6 +1,4 @@
 
-- Implement clear() method, that sets all bin content values to zero.
-
 - Implement advanced slicing a la numpy.
 
 - Write unit tests for the merge_axis_bins method when using extendable axes.
